projects/dms/dms-dynamic-service/k8s-config/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dms-dynamic
  name: dms-dynamic
  namespace: dms-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dms-dynamic
  template:
    metadata:
      labels:
        app: dms-dynamic
    spec:
      containers:
        - image: registry.coherent.in/dynamic-service:37
          resources:
            requests:
              cpu: "100m"
              memory: "1500Mi"
            limits:
              cpu: "2000m"
              memory: "4096Mi"
          imagePullPolicy: Always
          name: dms-dynamic
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30  # Add delay to let the app start
            failureThreshold: 30
            periodSeconds: 10
      imagePullSecrets:
      - name: registry-regcred
