projects/dms/dms-dynamic-service/k8s-config/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dms-dynamic
  name: dms-dynamic-svc
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: dms-dynamic
